--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1456,7 +1456,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1474,26 +1474,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_Multiplayer
-MRUItem1=/Game/MyMenu/MM_Widget/MM_HostGame
-MRUItem2=/Game/MyMenu/MM_Widget/Extra/MM_Button
-MRUItem3=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem4=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
-MRUItem5=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem0=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem1=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_ServerName
+MRUItem3=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem4=/Game/MyMenu/MM_Widget/MM_HostGame
+MRUItem5=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem6=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
+MRUItem7=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1561,11 +1561,13 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader.MM_ServerSettingsHeader=1
 /Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings.MM_LevelSettings=1
 /Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap.MM_DeveloperMap=1
+/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_ServerName.MM_ServerSetting_ServerName=1
+/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password.MM_ServerSetting_Password=1
 
 [RootWindow]
 ScreenPosition=X=419.000 Y=132.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2391,9 +2393,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
+Visual="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
+Object="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
