--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=2235,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1437,9 +1437,23 @@ MM_LevelSettings_C.Performance=True
 MM_LevelSettings_C.Clipping=True
 MM_LevelSettings_C.Navigation=True
 MM_DeveloperMap_C.Default=True
+MM_Settings_C.Appearance=True
+MM_Settings_C.Designer=True
+MM_Settings_C.Input=True
+MM_Settings_C.Interaction=True
+MM_Settings_C.Performance=True
+MM_Settings_C.Layout=True
+MM_Settings_C.Behavior=True
+MM_Settings_C.Render Transform=True
+MM_Settings_C.Clipping=True
+MM_Settings_C.Navigation=True
+MM_LevelSettings_C.Designer=True
+MM_MainMenu_C.Default=True
+MM_Multiplayer_C.Designer=True
+TextBlock.Localization=False
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -1456,7 +1470,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1474,26 +1488,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/Extra/MM_Button
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_ServerName
-MRUItem3=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem0=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
+MRUItem1=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
+MRUItem2=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem3=/Game/MyMenu/MM_Widget/MM_MainMenu
 MRUItem4=/Game/MyMenu/MM_Widget/MM_HostGame
-MRUItem5=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem6=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
-MRUItem7=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem5=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
+MRUItem6=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem7=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_ServerName
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1565,9 +1579,9 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password.MM_ServerSetting_Password=1
 
 [RootWindow]
-ScreenPosition=X=419.000 Y=132.000
+ScreenPosition=X=2277.000 Y=134.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2237,8 +2251,10 @@ TextureEditor.TimeStamp=2018.09.19-18.45.20
 TextureEditor.LastCompileMethod=Unknown
 
 [PluginBrowser]
+InstalledPlugins=BlueprintJson
 InstalledPlugins=SmoothSyncPlugin
 InstalledPlugins=SubsystemConfigurator
+InstalledPlugins=TwitchAuth
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2393,9 +2409,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
-Visual="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
-Object="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
+Widget=
+Visual=
+Object=
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
