--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1451,6 +1451,7 @@ MM_LevelSettings_C.Designer=True
 MM_MainMenu_C.Default=True
 MM_Multiplayer_C.Designer=True
 TextBlock.Localization=False
+MM_DeveloperMap_C.Designer=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1470,7 +1471,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1488,8 +1489,8 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
-MRUItem1=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
+MRUItem0=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
+MRUItem1=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
 MRUItem2=/Game/MyMenu/MM_Widget/MM_Multiplayer
 MRUItem3=/Game/MyMenu/MM_Widget/MM_MainMenu
 MRUItem4=/Game/MyMenu/MM_Widget/MM_HostGame
@@ -1579,7 +1580,7 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/Settings/MM_ServerSetting_Password.MM_ServerSetting_Password=1
 
 [RootWindow]
-ScreenPosition=X=2277.000 Y=134.000
+ScreenPosition=X=2364.000 Y=103.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
@@ -2366,6 +2367,7 @@ MM_WaveSetting_MonsterSpawnRate_C=StructProperty.DefaultValueCategory.None,
 MM_DeveloperMap_C=StructProperty.DefaultValueCategory.None,
 MM_Button_C=StructProperty.DefaultValueCategory.None,
 MM_HostGame_C=StructProperty.DefaultValueCategory.None,
+MM_LevelSettings_C=StructProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2458,8 +2460,8 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" "
+ContentWidget=
+PanelWidget=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
